<resources>
    <string name="app_name">MobileLiarsDice</string>
    <string name="logo">logo</string>
    <string name="appName">Liar\'s Dice</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signIn">Sign In</string>
    <string name="signIn2">Not a Member? Sign Up!</string>
    <string name="signUp">Sign Up</string>
    <string name="signUp2">Already a Member? Sign In!</string>
    <string name="passHint">* Password must be at least 6 characters</string>
    <string name="forgot">Forgot your password?</string>
    <string name="title_activity_main">Main</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="NeW">new</string>
    <string name="placeHolder">placeHolder</string>
    <string name="write_here">Write here...</string>
    <string name="delete_account">DELETE ACCOUNT</string>
    <string name="logout">logout</string>
    <string name="save">SAVE</string>
    <string name="title_activity_logout">logoutActivity</string>
    <string name="delete_text">Please enter your credentials to delete your accunt</string>
    <string name="cancel">CANCEL</string>
    <string name="delete">DELETE</string>
    <string name="rules">
        Before beginning to learn how to play, it\'s important to know a few basic terminologies
        involved with the game.These are some of the terms required to understand the basic flow
        of the game\'s conventions:

        \n\nBet - A claim to the amount of dice and their face values made by a player during their turn.
        This can either be a true or false claim about the dice in the hand.

        \n\nChallenge - When a player denies that another player\'s bet is true.

        \n\nRound - a phase in the game in which one of the players rolls the dice and makes a bet as to how
        many dice there are.

        \n\nEach player has their own hand that only they may see. Players take turns making bets, but must
        take into account the total number of dice in play. This means players are able to make bets on the
        face values of dice equal to or greater than the amount of dice in their own hand. Challenges are
        still made against these bets the same way, but a player loses a die from their hand if their
        challenge is wrong or if their bet is false and another player successfully challenges it.
        When a player loses a die, the round ends and a new round begins with the player that lost a 
        die. If a player loses all of their dice, they are disqualified from the game.

        \n\nThe winner is determined by which player still has remaining dice in their hand.
    </string>
    <string name="title_activity_game">gameActivity</string>
    <string name="ready_button_clicked">CANCEL</string>
    <string name="ready_button_not_clicked">READY</string>
    <string name="challenge_button">CHALLENGE</string>
    <string name="quit_button">LEAVE</string>
    <string name="roll_button">ROLL</string>
    <string name="lblCurrentTurn">Turn: </string>
    <string name="lblCurrentBid">Current bid: </string>
    <string name="lblNbDice">Number of CPU dice: </string>
    <string name="numberSpinnerPrompt">Number</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="cancel2">Cancel</string>
    <string name="single_mode">SINGLE MODE</string>
    <string-array name="numberSpinnerEntries">
        <item>Quantity</item>
        <item>10</item>
        <item>9</item>
        <item>8</item>
        <item>7</item>
        <item>6</item>
        <item>5</item>
        <item>4</item>
        <item>3</item>
        <item>2</item>
        <item>1</item>
    </string-array>
</resources>
