<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp"
    android:paddingTop="10dp"
    tools:context=".SinglePlayerModeActivity">
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:id="@+id/placeholder"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="50dp" >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <TextView
                android:id="@+id/lblCurrentTurn"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/lblCurrentTurn" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <TextView
                android:id="@+id/currentTurn"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="" />
        </RelativeLayout>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="50dp" >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <TextView
                android:id="@+id/lblCurrentBid"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/lblCurrentBid" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <TextView
                android:id="@+id/currentBid"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="" />
        </RelativeLayout>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/firstDiceImage"
            android:layout_width="50dp"
            android:layout_height="50dp" />

        <ImageView
            android:id="@+id/secondDiceImage"
            android:layout_width="50dp"
            android:layout_height="50dp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/thirdDiceImage"
            android:layout_width="50dp"
            android:layout_height="50dp" />

        <ImageView
            android:id="@+id/fourthDiceImage"
            android:layout_width="50dp"
            android:layout_height="50dp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10">

        <ImageView
            android:id="@+id/fifthDiceImage"
            android:layout_width="50dp"
            android:layout_height="50dp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/readyButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@color/colorRed"
            android:onClick="onClick"
            android:text="@string/ready_button_not_clicked" />

        <Button
            android:id="@+id/quitButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@color/colorGray"
            android:onClick="onClick"
            android:text="@string/quit_button" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <Button
            android:id="@+id/bidButton"
            android:layout_width="200dp"
            android:background="@color/colorGray"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="BID" />

        <Button
            android:id="@+id/challengeButton"
            android:layout_width="200dp"
            android:background="@color/colorGray"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="CHALLENGE" />
    </TableRow>
</TableLayout>