<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.Settings_fragment"
    android:background="#fff">

    <android.support.v7.widget.CardView
        android:layout_height="wrap_content"
        android:layout_width="match_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_picture"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@mipmap/app_foreground" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_picture"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="10dp"
                android:text="HELLO"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/delete_btn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="5dp"
                android:background="@color/colorRed"
                android:padding="5dp"
                android:text="@string/delete_account" />

            <Button
                android:id="@+id/logout_btn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_above="@+id/delete_btn"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@color/YELLOW"
                android:padding="5dp"
                android:text="@string/logout" />

            <Button
                android:id="@+id/saveBtn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_above="@+id/logout_btn"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="5dp"
                android:background="@color/LIMEGREEN"
                android:padding="5dp"
                android:text="@string/save" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/editPicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="232dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="106dp"
                android:clickable="true"
                android:focusable="true"
                app:backgroundTint="@color/LIMEGREEN"
                app:srcCompat="@android:drawable/ic_menu_edit" />

            <SeekBar
                android:id="@+id/distanceBar"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="399dp"
                android:layout_height="21dp"
                android:layout_above="@+id/saveBtn"
                android:layout_marginBottom="20dp"
                android:max="99"
                android:progress="50" />

            <TextView
                android:id="@+id/distaneTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/distanceBar"
                android:layout_marginBottom="10dp"
                android:layout_centerHorizontal="true"
                android:text="TextView"
                android:textSize="20sp" />


        </RelativeLayout>
    </android.support.v7.widget.CardView>

</FrameLayout>